--- a/src/html/intro.html
+++ b/src/html/intro.html
@@ -1,7 +1,66 @@
 <header class="header">
-	
+	<div class="container">
+		<div class="header__inner">
+			<div class="header__logo">
+				<a href="/" class="header-logo__link">
+					<img src="@img/logo.svg" alt="Лого" class="header-logo__img">
+
+					<div class="header-logo__texts">
+						<span>Гродненская</span>
+						<span>птицефабрика</span>
+					</div>
+				</a>
+			</div>
+			<nav class="header__nav">
+				<ul class="header-nav__list">
+					<li class="header-nav__item">
+						<a href="#" class="header-nav__link">О компании</a>
+
+						<ul class="header-nav__menu">
+							<li class="header-nav__menu-item"><a href="#">Доска почёта</a></li>
+							<li class="header-nav__menu-item"><a href="#">Организация работы с молодёжью</a></li>
+							<li class="header-nav__menu-item"><a href="#">Единый день информирования</a></li>
+							<li class="header-nav__menu-item"><a href="#">Общественные организации</a></li>
+						</ul>
+					</li>
+					<li class="header-nav__item">
+						<a href="#" class="header-nav__link">Продукция</a>
+					</li>
+					<li class="header-nav__item">
+						<a href="#" class="header-nav__link">Новости</a>
+					</li>
+					<li class="header-nav__item">
+						<a href="#" class="header-nav__link">Вакансии</a>
+					</li>
+					<li class="header-nav__item">
+						<a href="#" class="header-nav__link">Аренда</a>
+					</li>
+					<li class="header-nav__item">
+						<a href="#" class="header-nav__link">Контакты</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="header__widgets">
+				<div class="header-widget__eye">
+					<img src="@img/eye.svg" alt="Версия для слабовидящих" class="header-widget__eye-img">
+				</div>
+
+				<div class="header-widget__language">
+					<div class="header-widget__language-text">RU</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </header>
 
 <div class="intro">
-
+	<img src="@img/intro/intro-bg.jpg" alt="Яйца" class="intro__img">
+	<div class="container">
+		<div class="intro__inner">
+			<h1 class="intro__title">КПСУП «Гродненская птицефабрика»</h1>
+			<h2 class="intro__subtitle">…с любовью к покупателям</h2>
+			
+			<a href="#" class="intro__btn">Прайс-лист</a>
+		</div>
+	</div>
 </div>
