info section media

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,3 +1,42 @@
-<main>
-    
+<main class="main">
+    <section class="about-us section">
+		<div class="container">
+			<h2 class="about-us__title section__title">О нас</h2>
+
+			<div class="about-us__content section__content">
+				<div class="about-us__imgs">
+					<img src="@img/about-us/chikens-big.jpg" alt="" class="about-us__img">
+					<img src="@img/about-us/chikens-small.jpg" alt="" class="about-us__img">
+					<img src="@img/about-us/eggs.jpg" alt="" class="about-us__img">
+				</div>
+				<div class="about-us__info">
+					<h3 class="about-us__info-text">Гродненская птицефабрика основана в 1962 году на базе Гродненской инкубаторно-птицеводческой станции (ИПС) и в настоящий момент коммунальное производственное сельскохозяйственное унитарное предприятие «Гродненская птицефабрика» - крупнейшее в области птицеводческое предприятие, которое располагает мощностями для производства 100 миллионов яиц в год. Её знают далеко за пределами республики: в Москве и других регионах России. У фабрики широко развита сеть торговых точек на рынках областного центра, а так же Гомеля.</h3>
+					<a href="#" class="about-us__info-link">Читать далее</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="info">
+		<div class="container">
+			<div class="info__content">
+				<div class="info__items">
+					<div class="info__item">
+						<h3 class="info-item__title">>3000</h3>
+						<h4 class="info-item__subtitle">Сотрудников работают на производстве</h4>
+					</div>
+
+					<div class="info__item">
+						<h3 class="info-item__title">>4000тн.</h3>
+						<h4 class="info-item__subtitle">Месячный объём выпуска продукции</h4>
+					</div>
+
+					<div class="info__item">
+						<h3 class="info-item__title">~480млн</h3>
+						<h4 class="info-item__subtitle">Годовой объём выпуска яиц</h4>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </main>
