--- a/src/html/main.html
+++ b/src/html/main.html
@@ -10,7 +10,7 @@
 					<img src="@img/about-us/eggs.jpg" alt="" class="about-us__img">
 				</div>
 				<div class="about-us__info">
-					<h3 class="about-us__info-text">Гродненская птицефабрика основана в 1962 году на базе Гродненской инкубаторно-птицеводческой станции (ИПС) и в настоящий момент коммунальное производственное сельскохозяйственное унитарное предприятие «Гродненская птицефабрика» - крупнейшее в области птицеводческое предприятие, которое располагает мощностями для производства 100 миллионов яиц в год. Её знают далеко за пределами республики: в Москве и других регионах России. У фабрики широко развита сеть торговых точек на рынках областного центра, а так же Гомеля.</h3>
+					<p class="about-us__info-text">Гродненская птицефабрика основана в 1962 году на базе Гродненской инкубаторно-птицеводческой станции (ИПС) и в настоящий момент коммунальное производственное сельскохозяйственное унитарное предприятие «Гродненская птицефабрика» - крупнейшее в области птицеводческое предприятие, которое располагает мощностями для производства 100 миллионов яиц в год. Её знают далеко за пределами республики: в Москве и других регионах России. У фабрики широко развита сеть торговых точек на рынках областного центра, а так же Гомеля.</p>
 					<a href="#" class="about-us__info-link">Читать далее</a>
 				</div>
 			</div>
@@ -35,6 +35,40 @@
 						<h3 class="info-item__title">~480млн</h3>
 						<h4 class="info-item__subtitle">Годовой объём выпуска яиц</h4>
 					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="news section">
+		<div class="container">
+			<h2 class="news__title section__title">Новости</h2>
+
+			<div class="news__content">
+				<div class="news__items">
+					<div class="news__item">
+						<a href="#">
+							<div class="news-item__wrapper">
+								<h3 class="news-item__title">Совещание совета безопасности</h3>
+								<p class="news-item__text">На расширенном заседании Совета Безопасности обсуждали ситуацию в Украине и вокруг наших границ. К разговору пригласили не только представителей силового блока, но и руководство Совета Министров, местной власти, руководителей СМИ и экспертов.</p>
+								<span class="news-item__date">23 февраля 2022</span>
+							</div>
+						</a>
+					</div>
+
+					<div class="news__item">
+						<a href="#">
+							<div class="news-item__wrapper">
+								<h3 class="news-item__title">С днём защитника Отечества!</h3>
+								<p class="news-item__text">Дорогие и незаменимые мужчины, поздравляем вас с 23 февраля! Желаем вам силы, мужества и отваги. Пусть каждый день будет успешным, каждый поступок - достойным, каждая идея - отличной, каждое слово - твердым, а каждое действие - уверенным!</p>
+								<span class="news-item__date">23 февраля 2022</span>
+							</div>
+						</a>
+					</div>
+				</div>
+
+				<div class="news__wrapper-btn">
+					<a href="#" class="news__btn">Читать все новости</a>
 				</div>
 			</div>
 		</div>
