pavilions and slider sections

--- a/src/html/head.html
+++ b/src/html/head.html
@@ -8,5 +8,6 @@
     <meta name="description" content="поставщик нестандартных комплексных решений проблем оформления интерьера">
     
     <title>@@title</title>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
