--- a/src/html/main.html
+++ b/src/html/main.html
@@ -105,69 +105,69 @@
 			<div class="swiper mySwiper">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/1.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/1.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 				
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/2.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/2.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/3.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/3.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/4.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/4.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/5.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/5.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/6.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/6.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/7.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/7.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 				
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/8.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/8.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/9.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/9.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/10.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/10.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/11.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/11.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
-						<a href="#">
-							<img src="@img/slider/12.png" alt="">
+						<a href="#" class="swiper-slide__link">
+							<img src="@img/slider/12.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 				</div>
@@ -185,12 +185,41 @@
 <!-- Initialize Swiper -->
 <script>
   var swiper = new Swiper(".mySwiper", {
-	slidesPerView: 4,
-	slidesPerGroup: 4,
+	// slidesPerView: 5,
+	// slidesPerGroup: 5,
 	spaceBetween: 20,
+	autoplay: true,
+	speed: 1000,
 	pagination: {
 	  el: ".swiper-pagination",
 	  clickable: true,
 	},
-  });
+
+	breakpoints: {
+		1200: {
+			slidesPerView: 5,
+			slidesPerGroup: 5,
+		},
+
+		992: {
+			slidesPerView: 4,
+			slidesPerGroup: 4,
+		},
+
+		768: {
+			slidesPerView: 3,
+			slidesPerGroup: 3,
+		},
+
+		576: {
+			slidesPerView: 2,
+			slidesPerGroup: 2,
+		},
+		
+		280: {
+			slidesPerView: 1,
+			slidesPerGroup: 1,
+		}
+	}
+});
 </script>
