--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,80 @@
 <footer class="footer">
+	<div class="footer__top">
+		<div class="container">
+			<div class="footer__top-inner">
+				<div class="footer__widgets">
+					<div class="footer__logo logo">
+						<a href="/" class="footer-logo__link logo__link">
+							<img src="@img/logo.svg" alt="Лого" class="footer-logo__img logo__img">
+			
+							<div class="footer-logo__texts logo__texts">
+								<span>Гродненская</span>
+								<span>птицефабрика</span>
+							</div>
+						</a>
+					</div>
+		
+					<div class="footer-widget__eye">
+						<img src="@img/eye.svg" alt="Версия для слабовидящих" class="footer-widget__eye-img">
+						<span>Версия для слабовидящих</span>
+					</div>
+				</div>
+		
+				<nav class="footer__nav">
+					<ul class="footer-nav__list">
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">О компании</a>
+						</li>
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">Продукция</a>
+						</li>
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">Новости</a>
+						</li>
+					</ul>
+		
+					<ul class="footer-nav__list">
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">Вакансии</a>
+						</li>
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">Аренда</a>
+						</li>
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">Контакты</a>
+						</li>
+					</ul>
+				</nav>
+					
+				<div class="footer__contacts">
+					<a href="tel:80152681462" class="footer__contacts-item footer__phone">
+						<p>8 (0152) 68-14-62</p>
+					</a>
+		
+					<a href="mailto:ptica.grodno@tut.by" class="footer__contacts-item footer__email">
+						<p>ptica.grodno@tut.by</p>
+					</a>
+		
+					<div class="footer__contacts-item footer__address">
+						<p>Гродненский район, аг. Коптёвка, ул. Победы, 60.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<div class="footer__bottom">
+		<div class="container">
+			<div class="footer__bottom-inner">
+				<p class="footer__copyright">Copyright © 2022 Государственное предприятие «Гродненская птицефабрика».</p>
+				<div class="footer__developed-by">
+					<span>Разработано в</span>
+					
+					<a href="https://nbd.by/" target="_blank">
+						<img src="@img/footer/logo-nbd.svg" alt="Лого nbd">
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
