--- a/src/html/intro.html
+++ b/src/html/intro.html
@@ -1,11 +1,11 @@
 <header class="header">
 	<div class="container">
 		<div class="header__inner">
-			<div class="header__logo">
-				<a href="/" class="header-logo__link">
-					<img src="@img/logo.svg" alt="Лого" class="header-logo__img">
+			<div class="header__logo logo">
+				<a href="/" class="header-logo__link logo__link">
+					<img src="@img/logo.svg" alt="Лого" class="header-logo__img logo__img">
 
-					<div class="header-logo__texts">
+					<div class="header-logo__texts logo__texts">
 						<span>Гродненская</span>
 						<span>птицефабрика</span>
 					</div>
