we-produce section media

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -40,6 +40,62 @@
 		</div>
 	</section>
 
+	<section class="we-produce section">
+		<div class="container">
+			<h2 class="we-produce__title section__title">Мы производим</h2>
+
+			<div class="we-produce__content">
+				<div class="we-produce__cards">
+					<div class="we-produce__col">
+						<div class="we-produce__card">
+							<img src="@img/we-produce/egg.jpg" alt="" class="we-produce-card__img">
+
+							<div class="we-produce-card__info">
+								<h3 class="we-produce-card__title">Яйцо</h3>
+							</div>
+						</div>
+
+						<div class="we-produce__card">
+							<img src="@img/we-produce/rape.jpg" alt="Рапс" class="we-produce-card__img">
+
+							<div class="we-produce-card__info">
+								<h3 class="we-produce-card__title">Рапс</h3>
+							</div>
+						</div>
+					</div>
+
+					<div class="we-produce__col">
+						<div class="we-produce__card">
+							<img src="@img/we-produce/meat.jpg" alt="Мясо" class="we-produce-card__img">
+
+							<div class="we-produce-card__info">
+								<h3 class="we-produce-card__title">Мясо</h3>
+							</div>
+						</div>
+					</div>
+
+					<div class="we-produce__col">
+						<div class="we-produce__card">
+							<img src="@img/we-produce/oils.jpg" alt="Масла" class="we-produce-card__img">
+
+							<div class="we-produce-card__info">
+								<h3 class="we-produce-card__title">Масла</h3>
+							</div>
+						</div>
+
+						<div class="we-produce__card">
+							<img src="@img/we-produce/corn.jpg" alt="Кукуруза" class="we-produce-card__img">
+
+							<div class="we-produce-card__info">
+								<h3 class="we-produce-card__title">Кукуруза</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section class="news section">
 		<div class="container">
 			<h2 class="news__title section__title">Новости</h2>
