fixed slider and footer media

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -56,7 +56,7 @@
 					</a>
 		
 					<div class="footer__contacts-item footer__address">
-						<p>Гродненский район, аг. Коптёвка, ул. Победы, 60.</p>
+						<p>Гродненский район, аг.<br>Коптёвка, ул. Победы, 60.</p>
 					</div>
 				</div>
 			</div>
