--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 		<script src="js/app.min.js"></script>
 	</body>
