fixed intro media

--- a/src/html/intro.html
+++ b/src/html/intro.html
@@ -123,4 +123,8 @@
 			<a href="#" class="intro__btn">Прайс-лист</a>
 		</div>
 	</div>
+
+	<div class="container container-outside-btn">
+		<a href="#" class="intro__btn intro__outside-btn">Прайс-лист</a>
+	</div>
 </div>
