fixed footer media

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -59,6 +59,11 @@
 						<p>Гродненский район, аг.<br>Коптёвка, ул. Победы, 60.</p>
 					</div>
 				</div>
+
+				<div class="footer-widget__eye footer-widget__outside-eye">
+					<img src="@img/eye.svg" alt="Версия для слабовидящих" class="footer-widget__eye-img">
+					<span>Версия для слабовидящих</span>
+				</div>
 			</div>
 		</div>
 	</div>
