fixed pavilions media

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -150,10 +150,16 @@
 				<div class="pavilions__left">
 					<!-- <img src="@img/pavilions/pavilion.png" alt="Беседка" class="pavilions__pavilion-img"> -->
 					<picture>
-						<source srcset="@img/pavilions/pavilion280.jpg" media="(max-width: 380px)">
+						<source srcset="@img/pavilions/pavilion280.jpg" media="(max-width: 480px)">
 						<source srcset="@img/pavilions/pavilion.png">
 						<img srcset="@img/pavilions/pavilion.png" alt="Беседка" class="pavilions__pavilion-img">
 					</picture>
+				</div>
+
+				<div class="pavilions__wrapper-phone pavilions__outside-wrapper-phone">
+					<a href="tel:+375292848472" class="pavilions__phone">
+						<p>+375 29 284 84 72</p>
+					</a>
 				</div>
 
 				<div class="pavilions__right">
@@ -172,6 +178,8 @@
 					<img src="@img/pavilions/leafs.png" alt="Листва" class="pavilions__leafs-img">
 				</div>
 			</div>
+
+			<a href="#" class="pavilions__btn pavilions__outside-btn">Узнать подробнее</a>
 		</div>
 	</section>
 
