fixed about-us media

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<h2 class="about-us__title section__title">О нас</h2>
 
-			<div class="about-us__content section__content">
+			<div class="about-us__content">
 				<div class="about-us__imgs">
 					<!-- <img src="@img/about-us/chikens-big.jpg" alt="" class="about-us__img"> -->
 					<picture>
@@ -27,6 +27,15 @@
 					<p class="about-us__info-text">Гродненская птицефабрика основана в 1962 году на базе Гродненской инкубаторно-птицеводческой станции (ИПС) и в настоящий момент коммунальное производственное сельскохозяйственное унитарное предприятие «Гродненская птицефабрика» - крупнейшее в области птицеводческое предприятие, которое располагает мощностями для производства 100 миллионов яиц в год. Её знают далеко за пределами республики: в Москве и других регионах России. У фабрики широко развита сеть торговых точек на рынках областного центра, а так же Гомеля.</p>
 					<a href="#" class="about-us__info-link">Читать далее</a>
 				</div>
+			</div>
+
+			<div class="about-us__content about-us380__content">
+				<p class="about-us__info-text about-us380__text">Гродненская птицефабрика основана в 1962 году на базе Гродненской инкубаторно-птицеводческой станции (ИПС)</p>
+				<img src="@img/about-us/chikens-big280.jpg" alt="" class="about-us__img about-us380__img">
+				<p class="about-us__info-text about-us380__text">В настоящий момент коммунальное производственное сельскохозяйственное унитарное предприятие «Гродненская птицефабрика» - крупнейшее в области птицеводческое предприятие, которое располагает мощностями для производства 100 миллионов яиц в год.</p>
+				<img src="@img/about-us/chikens-small280.jpg" alt="" class="about-us__img about-us380__img">
+				<p class="about-us__info-text about-us380__text">Её знают далеко за пределами республики: в Москве и других регионах России. У фабрики широко развита сеть торговых точек на рынках областного центра, а так же Гомеля.</p>
+				<a href="#" class="about-us__info-link about-us380__info-link">Читать далее</a>
 			</div>
 		</div>
 	</section>
