--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-	@@include('html/head.html', { "title": "Laune" })
+	@@include('html/head.html', { "title": "КПСУП Гродненская птицефабрика" })
 	<body>
 		@@include('html/intro.html')
 		@@include('html/main.html')
