--- a/src/html/main.html
+++ b/src/html/main.html
@@ -9,18 +9,18 @@
 					<picture>
 						<source srcset="@img/about-us/chikens-big280.jpg" media="(max-width: 380px)">
 						<source srcset="@img/about-us/chikens-big.jpg">
-						<img srcset="@img/about-us/chikens-big.jpg" alt="" class="about-us__img">
+						<img srcset="@img/about-us/chikens-big.jpg" alt="Курицы" class="about-us__img">
 					</picture>
 					<!-- <img src="@img/about-us/chikens-small.jpg" alt="" class="about-us__img"> -->
 					<picture>
 						<source srcset="@img/about-us/chikens-small280.jpg" media="(max-width: 380px)">
 						<source srcset="@img/about-us/chikens-small.jpg">
-						<img srcset="@img/about-us/chikens-small.jpg" alt="" class="about-us__img">
+						<img srcset="@img/about-us/chikens-small.jpg" alt="Курицы" class="about-us__img">
 					</picture>
 					<!-- <img src="@img/about-us/eggs.jpg" alt="" class="about-us__img"> -->
 					<picture>
 						<source srcset="@img/about-us/eggs.jpg">
-						<img srcset="@img/about-us/eggs.jpg" alt="" class="about-us__img">
+						<img srcset="@img/about-us/eggs.jpg" alt="Яйца" class="about-us__img">
 					</picture>
 				</div>
 				<div class="about-us__info">
@@ -31,9 +31,9 @@
 
 			<div class="about-us__content about-us380__content">
 				<p class="about-us__info-text about-us380__text">Гродненская птицефабрика основана в 1962 году на базе Гродненской инкубаторно-птицеводческой станции (ИПС)</p>
-				<img src="@img/about-us/chikens-big280.jpg" alt="" class="about-us__img about-us380__img">
+				<img src="@img/about-us/chikens-big280.jpg" alt="Курицы" class="about-us__img about-us380__img">
 				<p class="about-us__info-text about-us380__text">В настоящий момент коммунальное производственное сельскохозяйственное унитарное предприятие «Гродненская птицефабрика» - крупнейшее в области птицеводческое предприятие, которое располагает мощностями для производства 100 миллионов яиц в год.</p>
-				<img src="@img/about-us/chikens-small280.jpg" alt="" class="about-us__img about-us380__img">
+				<img src="@img/about-us/chikens-small280.jpg" alt="Курицы" class="about-us__img about-us380__img">
 				<p class="about-us__info-text about-us380__text">Её знают далеко за пределами республики: в Москве и других регионах России. У фабрики широко развита сеть торговых точек на рынках областного центра, а так же Гомеля.</p>
 				<a href="#" class="about-us__info-link about-us380__info-link">Читать далее</a>
 			</div>
@@ -45,12 +45,12 @@
 			<div class="info__content">
 				<div class="info__items">
 					<div class="info__item">
-						<h3 class="info-item__title">>3000</h3>
+						<h3 class="info-item__title">3000</h3>
 						<h4 class="info-item__subtitle">Сотрудников работают на производстве</h4>
 					</div>
 
 					<div class="info__item">
-						<h3 class="info-item__title">>4000тн.</h3>
+						<h3 class="info-item__title">4000тн.</h3>
 						<h4 class="info-item__subtitle">Месячный объём выпуска продукции</h4>
 					</div>
 
@@ -71,7 +71,7 @@
 				<div class="we-produce__cards">
 					<div class="we-produce__col">
 						<div class="we-produce__card">
-							<img src="@img/we-produce/egg.jpg" alt="" class="we-produce-card__img">
+							<img src="@img/we-produce/egg.jpg" alt="Яйцо" class="we-produce-card__img">
 
 							<div class="we-produce-card__info">
 								<h3 class="we-produce-card__title">Яйцо</h3>
