fixed slider imgs and style

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -198,68 +198,68 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/1.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/30.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 				
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/2.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/31.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/3.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/32.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/4.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/33.png" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/5.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/34.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/6.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/35.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/7.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/36.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 				
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/8.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/37.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/9.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/38.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/10.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/39.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/11.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/40.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 					<div class="swiper-slide">
 						<a href="#" class="swiper-slide__link">
-							<img src="@img/slider/12.png" alt="" class="swiper-slide__img">
+							<img src="@img/slider/41.jpg" alt="" class="swiper-slide__img">
 						</a>
 					</div>
 				</div>
