fixed contacts style

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -110,7 +110,8 @@
 			</nav>
 		</header>
 		
-		<section class="contacts section">
+		<main class="main">
+			<section class="contacts section main-section">
 			<div class="container">
 				<h2 class="contacts__title section__title">Контакты</h2>
 
@@ -237,6 +238,7 @@
 				</div>
 			</div>
 		</section>
+		</main>
 
 		@@include('html/footer.html')
 
