--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -164,6 +164,9 @@
 							</div>
 						</div>
                     </div>
+
+                    <!-- <h3 class="vacancy__contact"><span>Связаться по телефону: </span><span><a href="tel:80152602496">8 (0152) 60-24-96</a> (Михайлова Марина Викторовна)</span></h3> -->
+                    <h3 class="vacancy__contact"><span>Связаться по телефону: </span><span>8 (0152) 60-24-96 (Михайлова Марина Викторовна)</span></h3>
                 </div>
             </section>
 		</main>
