--- a/src/html/main.html
+++ b/src/html/main.html
@@ -126,23 +126,39 @@
 			<div class="news__content">
 				<div class="news__items">
 					<div class="news__item">
-						<a href="#">
+						<!-- <a href="#"> -->
 							<div class="news-item__wrapper">
-								<h3 class="news-item__title">Совещание совета безопасности</h3>
+								<a href="#">
+									<img src="@img/news/5.jpg" alt="" class="news-item__img">
+								</a>
+								<a href="#">
+									<h3 class="news-item__title">Совещание совета безопасности</h3>
+								</a>
 								<p class="news-item__text">На расширенном заседании Совета Безопасности обсуждали ситуацию в Украине и вокруг наших границ. К разговору пригласили не только представителей силового блока, но и руководство Совета Министров, местной власти, руководителей СМИ и экспертов.</p>
-								<span class="news-item__date">23 февраля 2022</span>
+								<div class="news-item__bottom">
+									<span class="news-item__date">23 февраля 2022</span>
+									<a href="#" class="news-item__link">Подробнее</a>
+								</div>
 							</div>
-						</a>
+						<!-- </a> -->
 					</div>
 
 					<div class="news__item">
-						<a href="#">
+						<!-- <a href="#"> -->
 							<div class="news-item__wrapper">
-								<h3 class="news-item__title">С днём защитника Отечества!</h3>
+								<a href="#">
+									<img src="@img/news/6.jpg" alt="" class="news-item__img">
+								</a>
+								<a href="#">
+									<h3 class="news-item__title">С днём защитника Отечества!</h3>
+								</a>
 								<p class="news-item__text">Дорогие и незаменимые мужчины, поздравляем вас с 23 февраля! Желаем вам силы, мужества и отваги. Пусть каждый день будет успешным, каждый поступок - достойным, каждая идея - отличной, каждое слово - твердым, а каждое действие - уверенным!</p>
-								<span class="news-item__date">23 февраля 2022</span>
+								<div class="news-item__bottom">
+									<span class="news-item__date">23 февраля 2022</span>
+									<a href="#" class="news-item__link">Подробнее</a>
+								</div>
 							</div>
-						</a>
+						<!-- </a> -->
 					</div>
 				</div>
 
