--- a/src/news.html
+++ b/src/news.html
@@ -111,117 +111,57 @@
 		</header>
 		
 		<main class="main">
-			<section class="contacts section main-section">
-			<div class="container">
-				<h2 class="contacts__title section__title">Контакты</h2>
+            <section class="news section main-section">
+                <div class="container">
+                    <h2 class="news section__title">Новости</h2>
 
-				<div class="contacts__content">
-					<div class="contacts__cards">
-						<div class="contacts__card">
-							<div class="contacts-card__inner">
-								<div class="contacts-card__left">
-									<h4 class="contacts-card__post">Заместитель директора по производству</h4>
-								</div>
-	
-								<div class="contacts-card__right">
-									<h4 class="contacts-card__fio">Шкнай Александр Геннадьевич</h4>
-	
-									<a href="tel:80152681462" class="contacts-card__phone">
-										<p>8 (0152) 68-14-62</p>
-									</a>
-								</div>
-							</div>
-						</div>
+                    <div class="news__content">
+                        <div class="news__content">
+                            <div class="news__items">
+                                <div class="news__item">
+                                    <!-- <a href="#"> -->
+                                        <div class="news-item__wrapper">
+                                            <a href="#">
+                                                <img src="@img/news/5.jpg" alt="" class="news-item__img">
+                                            </a>
+                                            <a href="#">
+                                                <h3 class="news-item__title">Совещание совета безопасности</h3>
+                                            </a>
+                                            <p class="news-item__text">На расширенном заседании Совета Безопасности обсуждали ситуацию в Украине и вокруг наших границ. К разговору пригласили не только представителей силового блока, но и руководство Совета Министров, местной власти, руководителей СМИ и экспертов.</p>
+                                            <div class="news-item__bottom">
+                                                <span class="news-item__date">23 февраля 2022</span>
+                                                <a href="#" class="news-item__link">Подробнее</a>
+                                            </div>
+                                        </div>
+                                    <!-- </a> -->
+                                </div>
 
-						<div class="contacts__card">
-							<div class="contacts-card__inner">
-								<div class="contacts-card__left">
-									<h4 class="contacts-card__post">Заместитель директора по коммерческим вопросам</h4>
-								</div>
-	
-								<div class="contacts-card__right">
-									<h4 class="contacts-card__fio">Скорб Янина Вацлавовна</h4>
-	
-									<a href="tel:80152681462" class="contacts-card__phone">
-										<p>8 (0152) 60 22 63</p>
-									</a>
-								</div>
-							</div>
-						</div>
-
-						<div class="contacts__card">
-							<div class="contacts-card__inner">
-								<div class="contacts-card__left">
-									<h4 class="contacts-card__post">Помощник руководителя</h4>
-								</div>
-	
-								<div class="contacts-card__right">
-									<h4 class="contacts-card__fio">Зеленюк Татьяна Анатольевна</h4>
-	
-									<a href="tel:80152681462" class="contacts-card__phone">
-										<p>8 (0152) 68-14-62</p>
-									</a>
-								</div>
-							</div>
-						</div>
-
-						<div class="contacts__card">
-							<div class="contacts-card__inner">
-								<div class="contacts-card__left">
-									<h4 class="contacts-card__post">Главный бухгалтер</h4>
-								</div>
-	
-								<div class="contacts-card__right">
-									<h4 class="contacts-card__fio">Скорб Янина Вацлавовна</h4>
-	
-									<a href="tel:80152681462" class="contacts-card__phone">
-										<p>8 (0152) 60 22 63</p>
-									</a>
-								</div>
-							</div>
-						</div>
-
-						<div class="contacts__card">
-							<div class="contacts-card__inner">
-								<div class="contacts-card__left">
-									<h4 class="contacts-card__post">Заместитель главного бухгалтера</h4>
-								</div>
-	
-								<div class="contacts-card__right">
-									<h4 class="contacts-card__fio">Сайко Елена Францевна</h4>
-	
-									<a href="tel:80152681462" class="contacts-card__phone">
-										<p>8 (0152) 68-14-62</p>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="our-addresses section">
-			<div class="container">
-				<h2 class="our-addresses__title section__title">Наши адреса</h2>
-
-				<div class="our-addresses__content">
-					<div class="our-addresses__left">
-						<p class="our-addresses__left-address"><span>Юридический и почтовый адрес:</span>231710, Республика Беларусь, Гродненский район, аг. Коптёвка, ул. Победы, 60.</p>
-
-						<div class="our-addresses__left-map">
-							<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A27b0a1472e3da467981e752a42a458aa3c9fa29e31bf0dfd4a94cdb207ba4e8c&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
-						</div>
-					</div>
-
-					<div class="our-addresses__right">
-						<p class="our-addresses__right-address"><span>Почтовый адрес участка птицеводства:</span>230026, г. Гродно, ул. Славинского, 12</p>
-						<p class="our-addresses__right-email"><span>Электронная почта: </span>ptica.grodno@tut.by</p>
-						<p class="our-addresses__right-requisites"><span>Реквизиты:</span>Государственное Предприятие «Гродненская птицефабрика» УНП 500026959 <br>231710, Гродненский район, аг. Коптевка, ул.. Победы д. 60  <br>р/с № BY19 BAPB 3012 2006 4001 4000 0000  <br>в  ОАО Белагропромбанк <br>БИК BAPBBY2X <br>+375 152 60 22 37  ptica.grodno@tut.by</p>
-					</div>
-				</div>
-			</div>
-		</section>
+                                <div class="news__item">
+                                    <!-- <a href="#"> -->
+                                        <div class="news-item__wrapper">
+                                            <a href="#">
+                                                <img src="@img/news/6.jpg" alt="" class="news-item__img">
+                                            </a>
+                                            <a href="#">
+                                                <h3 class="news-item__title">С днём защитника Отечества!</h3>
+                                            </a>
+                                            <p class="news-item__text">Дорогие и незаменимые мужчины, поздравляем вас с 23 февраля! Желаем вам силы, мужества и отваги. Пусть каждый день будет успешным, каждый поступок - достойным, каждая идея - отличной, каждое слово - твердым, а каждое действие - уверенным!</p>
+                                            <div class="news-item__bottom">
+                                                <span class="news-item__date">23 февраля 2022</span>
+                                                <a href="#" class="news-item__link">Подробнее</a>
+                                            </div>
+                                        </div>
+                                    <!-- </a> -->
+                                </div>
+                            </div>
+            
+                            <div class="news__wrapper-btn">
+                                <a href="#" class="news__btn">Читать все новости</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 		</main>
 
 		@@include('html/footer.html')
